--- a/src/Moejoe.ProofOfConcept.JsonMergePatch.Core/Moejoe.ProofOfConcept.JsonMergePatch.Core.csproj
+++ b/src/Moejoe.ProofOfConcept.JsonMergePatch.Core/Moejoe.ProofOfConcept.JsonMergePatch.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Optimize>false</Optimize>
     <!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
@@ -10,11 +10,16 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
-  <ItemGroup>
-    <!-- keep references unless they are to package files. See the section about the NuGet upgrade below. -->
+  <ItemGroup Condition=" '$(TargetFramework)' != 'netstandard2.0' ">
+    <Reference Include="System.Collections.Concurrent" />
+    <Reference Include="System" />
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+  <!--<ItemGroup>
+    --><!--
     <Reference Include="Microsoft.CSharp">
       <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\Microsoft.CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System.Configuration" />
-  </ItemGroup>
+  </ItemGroup>-->
 </Project>
