--- a/test/Moejoe.ProofOfConcept.JsonMergePatch.Tests/Moejoe.ProofOfConcept.JsonMergePatch.Core.Tests.csproj
+++ b/test/Moejoe.ProofOfConcept.JsonMergePatch.Tests/Moejoe.ProofOfConcept.JsonMergePatch.Core.Tests.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="NUnit" Version="3.9.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Moejoe.ProofOfConcept.JsonMergePatch.Core\Moejoe.ProofOfConcept.JsonMergePatch.Core.csproj" />
