--- a/src/Moejoe.AspNet.JsonMergePatch/Moejoe.AspNet.JsonMergePatch.csproj
+++ b/src/Moejoe.AspNet.JsonMergePatch/Moejoe.AspNet.JsonMergePatch.csproj
@@ -17,7 +17,7 @@
     <Description>A  Json Merge Patch (RFC 7396 ) Implementation for Asp.NET.</Description>
     <PackageTags>RFC 7396 Json Merge Patch Asp.NET mvc5 Core</PackageTags>
     <MinClientVersion>2.12</MinClientVersion>
-    <Version>0.2.0</Version>
+    <Version>0.9.0-beta</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
