--- a/src/Moejoe.AspNet.JsonMergePatch/Moejoe.AspNet.JsonMergePatch.csproj
+++ b/src/Moejoe.AspNet.JsonMergePatch/Moejoe.AspNet.JsonMergePatch.csproj
@@ -17,8 +17,9 @@
     <Description>A  Json Merge Patch (RFC 7396 ) Implementation for Asp.NET.</Description>
     <PackageTags>RFC 7396 Json Merge Patch Asp.NET mvc5 Core</PackageTags>
     <MinClientVersion>2.12</MinClientVersion>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>bug fix release</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
